...
              Row(
                children: [
                  Padding(
                    padding: const EdgeInsets.all(4),
                    child: ElevatedButton(
                      onPressed: doRead,
                      child: const Text('Read'),
                    ),
                  ),
                  Padding(
                    padding: const EdgeInsets.all(4),
                    child: ElevatedButton(
                      onPressed: doReadAll,
                      child: const Text('ReadAll'),
                    ),
                  ),
                  Padding(
                    padding: const EdgeInsets.all(4),
                    child: ElevatedButton(
                      onPressed: doContainsKey,
                      child: const Text('ContainsKey'),
                    ),
                  ),
                ],
              ),
              Row(
                children: [
                  Padding(
                    padding: const EdgeInsets.all(4),
                    child: ElevatedButton(
                      onPressed: doWrite,
                      child: const Text('Write'),
                    ),
                  ),
                  Padding(
                    padding: const EdgeInsets.all(4),
                    child: ElevatedButton(
                      onPressed: doDelete,
                      child: const Text('Delete'),
                    ),
                  ),
                  Padding(
                    padding: const EdgeInsets.all(4),
                    child: ElevatedButton(
                      onPressed: doDeleteAll,
                      child: const Text('DeleteAll'),
                    ),
                  ),
                ],
              ),
              Row(
                children: [
                  Padding(
                    padding: const EdgeInsets.all(4),
                    child: ElevatedButton(
                      onPressed: doLegacyWrite,
                      child: const Text('LegacyWrite'),
                    ),
                  ),
                  Padding(
                    padding: const EdgeInsets.all(4),
                    child: ElevatedButton(
                      onPressed: doLegacyReadAll,
                      child: const Text('LegacyReadAll'),
                    ),
                  ),
                ],
              ),
              if (_future != null)
                FutureBuilder<TestResult>(
...
